# Hancock

./: .env.example  .gitignore  BUSINESS_PROPOSAL.md  CHANGELOG.md  COMPETITOR_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_README.md  Hancock_Colab_Finetune_v3.ipynb  Hancock_CyberViser_Finetune.ipynb  Hancock_Finetune_v3.ipynb  Hancock_Kaggle_Finetune.ipynb  Hancock_Universal_Finetune.ipynb  LAUNCH.md  LICENSE  Makefile  Modelfile.hancock  Modelfile.hancock-finetuned  OUTREACH_TEMPLATES.md  README.md  SECURITY.md  burp-brave.sh  docker-compose.yml  fly.toml  hancock.sh  hancock_agent.py  hancock_colab_finetune.ipynb  hancock_cpu_finetune.py  hancock_finetune.py  hancock_finetune_gpu.py  hancock_finetune_v2.py  hancock_finetune_v3.py  hancock_pipeline.py  koyeb.yaml  netlify.toml  oracle-cloud-setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup-burp-brave.sh  (+3 more)
.github/: FUNDING.yml  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  docker.yml  finetune.yml
clients/nodejs/: README.md  hancock.js  package.json
clients/python/: README.md  __init__.py  hancock_cli.py  hancock_client.py
collectors/: atomic_collector.py  cisa_kev_collector.py  ciso_kb.py  code_kb.py  formatter_v3.py  ghsa_collector.py  ioc_kb.py  mitre_collector.py  nvd_collector.py  pentest_kb.py  sigma_kb.py  soc_collector.py  soc_kb.py  yara_kb.py
data/: hancock_pentest_v1.jsonl  hancock_v2.jsonl
docs/: 404.html  _redirects  api.html  contact.html  demo.html  enterprise.html  index.html  openapi.yaml  pricing.html  robots.txt  sitemap.xml  sponsors.html  train.html
formatter/: to_mistral_jsonl.py  to_mistral_jsonl_v2.py
hancock-cpu-adapter/: README.md
hancock-cpu-adapter/checkpoint-10/: adapter_config.json  rng_state.pth  trainer_state.json
tests/: test_hancock_api.py  test_sdk_client.py
